--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,26 @@
 services:
   frontend:
-    image: bryanchristy/dz-international-frontend:0.1
+    image: bryanchristy/dz-international-frontend:latest-prod
+    env_file:
+      - .env
     ports:
       - "3000:3000"
     restart: unless-stopped
+    networks:
+      - dz-network
 
   backend:
-    image: bryanchristy/dz-international-backend:1.0
+    image: bryanchristy/dz-international-backend:latest-prod
+    env_file:
+      - .env
     ports:
       - "3200:3200"
     depends_on:
       - postgres
       - mongo
     restart: unless-stopped
+    networks:
+      - dz-network
 
   postgres:
     image: postgres:latest
@@ -26,6 +34,8 @@ services:
       - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - dz-network
 
   mongo:
     image: mongo:latest
@@ -34,13 +44,20 @@ services:
       - mongodata:/data/db
     ports:
       - "27017:27017"
+    networks:
+      - dz-network
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 8085:8080
+    networks:
+      - dz-network
 
 volumes:
   pgdata:
   mongodata:
+
+networks:
+  dz-network:
