CHNG: Traefik settings

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,35 @@
 services:
+  traefik:
+    image: traefik:v3.0
+    command:
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--providers.docker=true"
+      - "--api.dashboard=true"
+      # - "--certificatesresolvers.le.acme.httpchallenge=true"
+      # - "--certificatesresolvers.le.acme.httpchallenge.entrypoint=web"
+      # - "--certificatesresolvers.le.acme.email=bryanchristy2016@gmail.com"
+      # - "--certificatesresolvers.le.acme.storage=/letsencrypt/acme.json"
+      - "--entrypoints.websecure.http.tls=true"
+      - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      # - "traefik-certificates:/letsencrypt"
+
   frontend:
     image: bryanchristy/dz-international-frontend:latest-prod
     env_file:
       - .env
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.entrypoints=websecure"
+      # - "traefik.http.routers.frontend.tls.certresolver=le"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+      - "traefik.http.routers.frontend.rule=Host(`192.168.1.15`) || Host(`localhost`)"
     ports:
       - "3000:3000"
     restart: unless-stopped
@@ -58,6 +85,7 @@ services:
 volumes:
   pgdata:
   mongodata:
+  # traefik-certificates:
 
 networks:
   dz-network:
