--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
       # - "traefik.http.routers.frontend.tls.certresolver=le"
       - "traefik.http.services.frontend.loadbalancer.server.port=3000"
       # - "traefik.http.routers.frontend.rule=Host(`domain.com`)"
-      - "traefik.http.routers.frontend.rule=Host(`192.168.1.15`) || Host(`localhost`)"
+      - "traefik.http.routers.frontend.rule=Host(`192.168.1.15`) && PathPrefix(`/`)"
     ports:
       - "3000:3000"
     restart: unless-stopped
@@ -46,11 +46,13 @@ services:
       - .env
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.entrypoints=websecure"
-      # - "traefik.http.routers.frontend.tls.certresolver=le"
-      - "traefik.http.services.frontend.loadbalancer.server.port=3200"
-      # - "traefik.http.routers.frontend.rule=Host(`api.domain.com`)"
-      - "traefik.http.routers.frontend.rule=Host(`192.168.1.15/api`) || Host(`localhost`)"
+      - "traefik.http.routers.backend.entrypoints=websecure"
+      # - "traefik.http.routers.backend.tls.certresolver=le"
+      - "traefik.http.services.backend.loadbalancer.server.port=3200"
+      # - "traefik.http.routers.backend.rule=Host(`api.domain.com`)"
+      - "traefik.http.routers.backend.rule=Host(`192.168.1.15`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.backend.middlewares=backend-stripprefix"
+      - "traefik.http.middlewares.backend-stripprefix.stripprefix.prefixes=/api"
     ports:
       - "3200:3200"
     depends_on:
