RFC: Docker compose

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+IP=
+DOMAIN=
+
+FRONTEND_TAG=
+BACKEND_TAG=
+
+ACME_EMAIL=
+
+CF_API_EMAIL=
+CF_API_KEY=
+
 NEXT_PUBLIC_API=''
 
 NODE_ENV=
@@ -14,3 +25,14 @@ DB_PASSWORD=
 DB_DATABASE=
 
 DB_SSL=
+
+SWAGGER_PASSWORD=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
