--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -1,19 +1,18 @@
 services:
   traefik:
     command:
-      - "--certificatesresolvers.le.acme.httpchallenge=true"
-      - "--certificatesresolvers.le.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.le.acme.email=${ACME_EMAIL}"
-      - "--certificatesresolvers.le.acme.storage=/letsencrypt/acme.json"
+      - "--entrypoints.web.address=:80"
+      - "--providers.docker=true"
+      - "--api.dashboard=true"
 
   frontend:
     labels:
-      - "traefik.http.routers.frontend.rule=Host(`${IP}`) && PathPrefix(`/`)"
-      - "traefik.http.routers.frontend.tls.certresolver=le"
+      - "traefik.http.routers.frontend.rule=PathPrefix(`/`)"
+      - "traefik.http.routers.frontend.entrypoints=web"
 
   backend:
     labels:
-      - "traefik.http.routers.backend.rule=Host(`${IP}`) && PathPrefix(`/api`)"
-      - "traefik.http.routers.backend.tls.certresolver=le"
+      - "traefik.http.routers.backend.rule=PathPrefix(`/api`)"
+      - "traefik.http.routers.backend.entrypoints=web"
       - "traefik.http.routers.backend.middlewares=backend-stripprefix"
       - "traefik.http.middlewares.backend-stripprefix.stripprefix.prefixes=/api"
