--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,7 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - http:
+    - host: dzinternational.com
+      http:
         paths:
           - path: /
             pathType: Prefix
@@ -16,7 +17,10 @@ spec:
                 name: frontend-service
                 port:
                   number: 3000
-          - path: /api
+    - host: api.dzinternational.com
+      http:
+        paths:
+          - path: /
             pathType: Prefix
             backend:
               service:
